@@ -1,0 +1,7 @@
+
+.. raw:: html
+
+    <object class="svg-object"
+            data="_static/examples/revisions_and_ranges/10_example_ranges.gv.svg"
+            type="image/svg+xml">
+    </object>
